# uni-assignment-2021-22

./: README.md  pyproject.toml
applications/: dice_throws.py  mean_variance.py  shapes.py
uni_assignment_2021_22/mean_variance/: random_float.py  value_list.py
uni_assignment_2021_22/shapes/: commands.py  indexer.py  shapes.py
