[tool.poetry]
name = "uni-assignment-2021-22"
version = "0.1.0"
description = ""
authors = ["ArnasVysniauskas <81956480+ArnasVysniauskas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
